# fastapi-async-curd

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg  setup.py
curd/: __init__.py  curd.py  deletefunc.py  getadvanced.py  getallfunc.py  getfunc.py  postfunc.py  putfunc.py  sqlcurd.py  util.py
models/: config.py  dbconnect.py  dbmodels.py
tests/: conftest.py  test_a1_functionality.py
