[metadata]
name = fastapi-async-curd
version = 0.0.1
author = Beimnet B Degefu
author_email = beimdegefu@gmail.com
description = simple async automatic curd routes generator package using fastapi and sqlalchemy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bushubeke/fastapi-async-curd
project_urls =
     Documentation = https://github.com/bushubeke/fastapi-async-curd-docs
     Source Code = https://github.com/bushubeke/fastapi-async-curd
     Issue Tracker = https://github.com/bushubeke/fastapi-async-curd/issues
    
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == curd
packages = find:
include_package_data= true
python_requires = >=3.7

[options.packages.find]
where = curd